# GangOwl

./: .gitignore  app.html  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-desktop.yml
electron/: main.cjs
public/: about.html  die-cut-stickers.html  dtf-printing.html  generate-assets.html  guide.html  privacy.html  robots.txt  sitemap.xml  terms.html
src/: AdSlot.jsx  App.jsx  LicenseGate.jsx  edition.js  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
~/.tauri/: gangowl.key  gangowl.key.pub
