[package]
name = "gangowl"
version = "1.0.0"
description = "GangOwl - Gang Sheet Builder"
authors = ["Take-Owl"]
edition = "2021"

[lib]
name = "gangowl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
